[project]
name = "claude-agent-sdk-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.4",
]

[dependency-groups]
dev = ["ruff>=0.14.1"]


[[tool.uv.index]]
name = 'ali'
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
lint.select = ["I"]

[tool.setuptools]
package-dir = { "" = "src" }
